// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render NominationPage with movies 1`] = `
<AppPage>
  <WelcomeMessage
    isHidden={true}
  />
  <MovieSearch
    numResults={5}
  />
  <Connect(CreateBallotMovieList) />
  <ButtonGroup>
    <SaveBallotButton />
    <button
      className="button button--secondary"
      disabled={false}
      onClick={[Function]}
    >
      Start Over
    </button>
  </ButtonGroup>
  <ConfirmationModal
    isOpen={false}
    onClose={[Function]}
    onConfirm={[Function]}
  />
</AppPage>
`;

exports[`should render NominationPage with no movies 1`] = `
<AppPage>
  <WelcomeMessage
    isHidden={false}
  />
  <MovieSearch
    numResults={5}
  />
  <ButtonGroup>
    <SaveBallotButton />
    <button
      className="button button--secondary"
      disabled={true}
      onClick={[Function]}
    >
      Start Over
    </button>
  </ButtonGroup>
  <ConfirmationModal
    isOpen={false}
    onClose={[Function]}
    onConfirm={[Function]}
  />
</AppPage>
`;
